--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,9 @@
     "target": "es6",
     "module": "commonjs",
     "moduleResolution": "node",
+    "noImplicitAny": true,
     "outDir": "dist",
+    "rootDir": ".",
     "typeRoots": [
       "node_modules/@types"
     ]
